--- a/biome.json
+++ b/biome.json
@@ -33,9 +33,7 @@
               },
               {
                 "name": "useAtomState",
-                "stableResult": [
-                  1
-                ]
+                "stableResult": [1]
               }
             ]
           }
@@ -64,9 +62,7 @@
         "useDefaultSwitchClause": "warn",
         "useSortedClasses": {
           "options": {
-            "functions": [
-              "conditionalJoin"
-            ]
+            "functions": ["conditionalJoin"]
           },
           "level": "warn",
           "fix": "safe"
