--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,22 @@
 {
-  "extends": "@objectively/typescript-config/react-library.json",
   "compilerOptions": {
+    "declaration": true,
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "incremental": false,
+    "isolatedModules": true,
+    "lib": ["es2022", "DOM", "DOM.Iterable"],
+    "module": "NodeNext",
+    "moduleDetection": "force",
+    "moduleResolution": "NodeNext",
+    "noUncheckedIndexedAccess": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "ES2022",
+    "removeComments": false,
+    "noEmit": true,
+    "rootDir": "src",
     "outDir": "dist",
     "types": ["vitest/globals"]
   },
